--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
     <div class="coin">
         <h2>Coin 1st Edition</h2>
         <img width="450" src="coin.jpg" alt="b1tco1n coin">
-        <h3>price: 30.000 sats</h3>
-        <p><img style="background: white; padding: 6px;" width="400" src="https://legend.lnbits.com/api/v1/qrcode/LNURL1DP68GURN8GHJ7MRWVF5HGUEWVGCHGCM0X9HZUMMJVUHKCMN4WFK8QTMPWP5J7A339AKXUATJDSHNYDQQGQGMR" alt="b1tco1n coin"></p>
-        <p>LNURL1DP68GURN8GHJ7MRWVF5HGUEWVGCHGCM0X9HZUMMJVUHKCMN4WFK8QTMPWP5J7A339AKXUATJDSHNYDQQGQGMR</p>
+        <h3>price was 30.000 sats.</h3>
+        <p>First edition coins are sold out. (01.04.2023)</p>
     </div>
-
+    <div class="coin">
+        <h2>Coin 2nd Edition</h2>
+        <p>999 Siver, nickel silver, brass or bronze</p>
+        <li>20000 sats per coin</li>
+        <li>21000 sats per brass coin</li>
+        <li>72000 sats per silver (999) coin</li>
+        <li>all coins can be etched with <a href="https://en.wikipedia.org/wiki/Liver_of_sulfur">liver of sulfur</a> + 2000 sats.</li>
+        <img src="coin2.jpg" alt="">
+    </div>
 </body>
 </html>
